--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 	},
 	"dependencies": {
 		"bootstrap": "^5.3.2",
+		"i18next": "^23.7.20",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^14.0.1",
 		"react-router-dom": "^6.21.2"
 	},
 	"devDependencies": {
