--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"bootstrap": "^5.3.2",
 		"i18next": "^23.7.20",
+		"i18next-browser-languagedetector": "^7.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.1",
