--- a/package.json
+++ b/package.json
@@ -7,26 +7,37 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "jest --config=config.json"
 	},
 	"dependencies": {
 		"bootstrap": "^5.3.2",
 		"i18next": "^23.7.20",
 		"i18next-browser-languagedetector": "^7.2.0",
+		"jest": "^29.7.0",
 		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.0",
 		"react-dom": "^18.2.0",
 		"react-i18next": "^14.0.1",
 		"react-router-dom": "^6.21.2"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.23.9",
+		"@babel/preset-react": "^7.23.3",
+		"@testing-library/jest-dom": "^6.3.0",
+		"@testing-library/react": "^14.1.2",
+		"@types/cypress": "^1.1.3",
+		"@types/jest": "^29.5.11",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
 		"@vitejs/plugin-react": "^4.2.1",
+		"cypress": "^13.6.3",
 		"eslint": "^8.55.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"ts-jest": "^29.1.2",
 		"typescript": "^5.2.2",
 		"vite": "^5.0.8"
 	}
